# asgard

./: .dockerignore  .env  .env.example  .gitignore  API_ENHANCEMENTS.md  COMPLETE_FIX_SUMMARY.md  DEPLOY_DNS_FIX.md  DNS_SUBPROCESS_FIX.md  DOCKER_BUILD_FIX.md  Dockerfile  Dockerfile.simple  Dockerfile.spark-s3  ECR_SECRET_FIX.md  ECR_SECRET_FIX_COMPLETED.md  FEAST_API_TEST_REPORT.md  FEAST_API_TEST_SUMMARY.md  FEAST_REAL_DATA_TEST.md  FEAST_S3_REGION_FIX.md  FIX_SCHEMA_FIELD.md  PERMISSION_FIX_SUMMARY.md  QUICK_FIX_SUMMARY.md  README.md  S3_INTEGRATION_STATUS.md  SCHEMA_NOT_FOUND_FIX.md  SESSION_PROPERTIES_FIX.md  SUCCESS_SUMMARY.md  TEST_SUMMARY.md  TRANSFORMATION_FIX.md  TRANSFORMATION_SUCCESS.md  TRANSFORM_API_TEST_SUMMARY.md  build-spark-image.sh  complete_deployment.py  create-schemas.sh  deploy_mlflow_model.py  deployment.yaml  example_usage.py  fix_feast_and_test.sh  main.py  manual_deploy.py  profiles.yml.corrected  (+11 more)
.github/secrets/: AWS_ACCESS_KEY_ID.txt  AWS_SECRET_ACCESS_KEY.txt  KUBECONFIG.txt
.github/workflows/: build-spark-image.yml  deploy.yml
app/: config.py  dependencies.py  main.py
app/airbyte/: client.py  router.py  schemas.py
app/airflow/: __init__.py  client.py  router.py  schemas.py
app/api/: router.py
app/api/v1/endpoints/: transformations.py
app/core/models/: transformation.py
app/core/services/: transformation_service.py
app/data_products/: __init__.py  client.py  router.py  schemas.py  service.py
app/data_transformation/: client.py  router.py  schemas.py  service.py
app/dbt_transformations/: __init__.py  router.py  schemas.py  service.py
app/feast/: README.md  __init__.py  router.py  schemas.py  service.py
app/infrastructure/aws/: glue.client.py  s3_client.py
app/infrastructure/database/: connection.py
app/infrastructure/database/models/: transformation.py
app/infrastructure/database/repositories/: transformation_repository.py
app/mlops/: __init__.py  deployment_service.py  router.py  schemas.py  service.py
app/utils/: validators.py
dbt/: .user.yml  README.md  README_old.md  dbt_project.yml  profiles.yml
dbt/macros/: data_product_utils.sql
dbt/models/: sources.yml
dbt/models/data_products/: dp_customer_360.sql  dp_product_performance.sql  dp_revenue_analytics.sql  schema.yml
dbt/models/staging/: sources.yml  stg_customers.sql  stg_customers_clean.sql  stg_orders.sql  stg_products.sql  stg_transactions.sql
docs/: API_CLEANUP_SUMMARY.md  API_TESTING_COMPLETE.md  API_TEST_RESULTS.md  ARCHITECTURE.md  COMPLETE_ARCHITECTURE.md  DIAGRAMS.md  END_TO_END_PLATFORM_DOCUMENTATION.md  EXAMPLE_TRAINING_SCRIPT.md  FEAST_COMPLETE_GUIDE.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_TEST_RESULTS.md  FIXES_SUMMARY.md  FIX_GOLD_GOLD_SCHEMA.md  GOLD_LAYER_IMPLEMENTATION.md  MLOPS_API_CLEANUP.md  MLOPS_DEPLOY_API_GUIDE.md  MLOPS_QUICK_REFERENCE.md  ONBOARDING_SETUP.md  PERMISSION_FIX_SUMMARY.md  PLATFORM_DOCUMENTATION_AND_VIDEO.md  PRODUCTION_CONFIG_UPDATE.md  PRODUCTION_TESTING_GUIDE.md  README.md  SINGLE_CLICK_DEPLOYMENT.md  TEST_RESULTS_SUMMARY.md  TRANSFORMATION_APIs_DOCUMENTATION.md  TRINO_CONNECTION_FIX.md  TRINO_CONNECTION_FIXED.md  USE_CASE_GUIDE.md
docs/archive/: API_TESTING_GUIDE.md  COMPLETE_GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION.md  Deployment_README.md  FEAST_API_DEMO_GUIDE.md  FEAST_DOCUMENTATION.md  FEAST_TRAINING_TEST_RESULTS.md  ICEBERG_INTEGRATION.md  MLOPS.md  MLOPS_API.md  MLOPS_API_DEMO_GUIDE.md  MLOPS_API_FINAL.md  MLOPS_DEPLOY_FIX.md  MLOPS_QUICK_REFERENCE.md  ONE_CLICK_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  SCRIPT_TRAINING_IMPLEMENTATION.md  SCRIPT_TRAINING_INFERENCE.md  TESTING_SUMMARY.md  dbt_README.md
docs/feast-ui/: README.md  setup_feast_repo.py  start-asgard-feast-ui.sh
examples/: README.md  data_products_example.py  upload_training_script.py
examples/training_scripts/: lightgbm_classification.py  sklearn_classification.py  xgboost_regression.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
helmchart/: values.yaml
helmchart/templates/: deployment.yaml  hpa.yaml  ingress-new.yaml  ingress-public.yaml  ingress.yaml  service.yaml
k8s/: 04-configmap.yaml  ECR_AUTO_REFRESH_README.md  ECR_README.md  data-products-api.yaml  ecr-auto-refresh-cronjob.yaml  ecr-credentials.yaml  ecr-secret-rbac-data-platform.yaml  ecr-secret-rbac.yaml  ecr-secret-refresh-cronjob-data-platform.yaml  ecr-secret-refresh-cronjob.yaml  fix-ecr-secret.sh  kaniko.yaml  namespace.yaml  production-deployment.yaml  spark-rbac.yaml
ml_deployment/: COMPLETE_INTEGRATION.md  Dockerfile.inference  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  demo.py  deploy.sh  encode_script.py  example_train.py  inference_service.py  requirements.txt  train_with_feast.py  upload_and_deploy.py
ml_deployment/k8s/: deployment.yaml
mlflow/: API_TESTING_COMPLETE_WORKFLOW.md  API_TESTING_REPORT.md  COMPLETE_GUIDE.md  DASHBOARD_FIX.md  FEAST_MLOPS_TEST_REPORT.md  FEAST_QUICK_REFERENCE.md  FIX_S3_CREDENTIALS.md  MLOPS_API_FINAL_TEST_REPORT.md  README.md  ROBUSTNESS_FIXES.md  TESTING_SUMMARY.md  TRAINING_FEAST_SUMMARY.md  TRAINING_WITH_FEAST_TEST_REPORT.md  TROUBLESHOOTING_EMPTY_DASHBOARD.md  deploy.sh  mlflow-deployment.yaml  mlflow-ingress.yaml  mlflow-service.yaml  postgres.yaml  storage.yaml  verify-secret.sh
script/: api-examples.sh  deploy-api.sh  deploy-combined-fixes.sh  deploy-feast.sh  deploy-production-enhanced.sh  deploy-production.sh  deploy-schema-fix.sh  feast-ui-launcher.sh  final_api_test.sh  production-deployment-fix.sh  production-test-dbt-api.sh  start-feast-ui.sh  validate-production-config.sh  validate-production-env.sh
